Listener v1.5.3 compat via TCP and HDLC

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [tox]
-envlist = flake8,py27,pypy,py35
-
-[testenv]
-basepython = python3.5
+envlist = flake8,py27,py36,pypy
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 src
+commands = flake8 src tests
+
+[testenv]
+deps =
+     pytest
+     pytest-xdist
+commands = pytest tests
